Подготовка для тестов.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.test:monitor:1.5.0'
+        }
+    }
 }
 
 dependencies {
@@ -54,6 +59,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation "com.github.moxy-community:moxy:2.1.2"
+    androidTestImplementation 'androidx.test:rules:1.5.0'
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
@@ -76,4 +82,14 @@ dependencies {
     // Dagger (Dependency Injection)
     implementation 'com.google.dagger:dagger:2.24'
     kapt 'com.google.dagger:dagger-compiler:2.24'
+
+    //Test core
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    //Fragment
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.5'
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
 }
