--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
     }
     configurations.all {
         resolutionStrategy {
-            force 'androidx.test:monitor:1.5.0'
+            force 'androidx.test:monitor:1.4.0-rc01'
         }
     }
 }
@@ -59,7 +59,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation "com.github.moxy-community:moxy:2.1.2"
-    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0-rc01'
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
@@ -85,11 +85,11 @@ dependencies {
 
     //Test core
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
     //Fragment
-    debugImplementation 'androidx.fragment:fragment-testing:1.5.5'
-    debugImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 }
