--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ android {
             force 'androidx.test:monitor:1.4.0-rc01'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -92,4 +97,30 @@ dependencies {
     //Fragment
     debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
     debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+
+    //Robolectric
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+
+    //Mockito
+    testImplementation "org.mockito:mockito-core:2.25.1"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+        exclude group: 'org.mockito'
+    }
+
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    def livedata_version = "2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$livedata_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$livedata_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$livedata_version"
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
 }
