--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
             force 'androidx.test:monitor:1.4.0-rc01'
         }
     }
+
     testOptions {
         unitTests {
             includeAndroidResources = true
@@ -64,7 +65,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation "com.github.moxy-community:moxy:2.1.2"
-    androidTestImplementation 'androidx.test:rules:1.4.0-rc01'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
@@ -90,7 +91,7 @@ dependencies {
 
     //Test core
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
@@ -98,14 +99,16 @@ dependencies {
     debugImplementation 'androidx.fragment:fragment-testing:1.3.5'
     debugImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
+
+
     //Robolectric
     testImplementation 'org.robolectric:robolectric:4.5.1'
-    testImplementation 'androidx.test:core:1.3.0'
-    testImplementation 'androidx.test:runner:1.3.0'
-    testImplementation 'androidx.test.ext:junit:1.1.2'
-    testImplementation 'androidx.test.ext:truth:1.3.0'
-    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    testImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'androidx.test:runner:1.5.2'
+    testImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation 'androidx.test.ext:truth:1.5.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
 
     //Mockito
     testImplementation "org.mockito:mockito-core:2.25.1"
@@ -113,6 +116,7 @@ dependencies {
     testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
         exclude group: 'org.jetbrains.kotlin'
         exclude group: 'org.mockito'
+        compile "org.mockito:mockito-core:4.5.1"
     }
 
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
